fix layout on iOS

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -89,8 +89,8 @@
 
 #delorean {
     background-image: url(/images/delorean.png);
-    height: 150px;
-    width: 225px;
+    width: min(30vw, 225px);
+    height: calc(min(30vw, 225px) * 0.66);
     position: absolute;
     left: 50%;
     margin-left: -113px;
@@ -112,8 +112,8 @@
     display: block;
     font-size: 0;
     position: relative;
-    height: 150px;
-    width: 600px;
+    width: min(80vw, 600px);
+    height: calc(min(80vw, 600px) * 0.25);
     background-image: url(/images/wordmark.png);
     background-size: cover;
     margin: 0 auto;
